--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <body>
 
         <div id="root"></div>
-        <script src="bundle.min.js"></script>
+        <script src="./build/bundle.js"></script>
 
     </body>
 </html>
