--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <body>
 
         <div id="root"></div>
-        <script src="./bundle.js"></script>
+        <!--<script src="./scripts/index.js"></script>-->
 
     </body>
 </html>
