--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
 
         <div id="root"></div>
-        <script src="./bundle.js"></script>
+        <!--<script src="./scripts/index.js"></script>-->
 
     <script type="text/javascript" src="/home/bundle.js"></script></body>
 </html>
