--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
         <div id="root"></div>
         <!--<script src="./scripts/index.js"></script>-->
 
-    <script type="text/javascript" src="/home/bundle.js"></script></body>
+    <script type="text/javascript" src="/bundle.js"></script></body>
 </html>
