--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Difee Home</title>
+        <title>Toolbox Reference - React</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
@@ -10,5 +10,5 @@
         <div id="root"></div>
         <!--<script src="./scripts/index.js"></script>-->
 
-    <script type="text/javascript" src="/home/bundle.js"></script></body>
+    <script type="text/javascript" src="/bundle.js"></script></body>
 </html>
